--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@reduxjs/toolkit": "1.9.3",
+    "antd": "^5.26.6",
+    "axios": "^1.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
     "react-redux": "8.0.5",
-    "react-router": "^7.6.3"
+    "react-router": "^7.6.3",
+    "react-spinners": "0.13.8",
+    "sass": "^1.89.2"
   },
   "devDependencies": {
     "@types/react": "18.0.28",
