--- a/package.json
+++ b/package.json
@@ -14,18 +14,23 @@
     "@reduxjs/toolkit": "1.9.3",
     "antd": "^5.26.6",
     "axios": "^1.10.0",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0",
     "react-redux": "8.0.5",
     "react-router": "^7.6.3",
     "react-spinners": "0.13.8",
-    "sass": "^1.89.2"
+    "redux-persist": "^6.0.0",
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@vitejs/plugin-react-swc": "3.0.0",
+    "sass": "^1.58.3",
     "vite": "4.2.0"
   }
 }
